--- a/src/core/index.css
+++ b/src/core/index.css
@@ -64,3 +64,23 @@ button:focus {
 tr:nth-child(even) {
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+.fade-appear,
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+.fade-appear-active,
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms linear 150ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 150ms linear;
+}
